2008-04-18  Joel Brobecker  <brobecker@adacore.com>

	* breakpoint.c (print_one_breakpoint_location): Make sure to print
	the breakpoint address only once.

2008-04-16  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/2445
	* exec.c: Correct "arch-utils.h" include.

2008-03-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* ia64-tdep.c (examine_prologue): Correct array access.

2008-03-27  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.8.0.20080327-cvs.

2008-03-27  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.8 released.

2008-03-27  Joel Brobecker  <brobecker@adacore.com>

	* NEWS: Replace "Changes since GDB 6.7" into changes in GDB 6.8".

2008-03-27  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.8.
	* version.in: Likewise.

2008-03-21  Thomas Mittelstaedt  <T.Mittelstaedt@cadenas.de>  (tiny change)

	* aix-thread.c (pdc_read_regs): Fix compiler warning.
	(pdc_write_regs, aix_thread_resume, fetch_regs_kernel_thread)
	(store_regs_kernel_thread): Likewise.

2008-03-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* stack.c (print_stack_frame, print_frame): Use RETURN_MASK_ERROR.
	* symmisc.c (dump_symtab_1): Likewise.
	* wrapper.c (gdb_value_struct_elt): Likewise.

2008-03-17  Nick Hudson  <nick.hudson@dsl.pipex.com>

        * Makefile.in (amd64nbsd-nat.o): New dependency.
        * amd64nbsd-nat.c: Include "nbsd-nat.h".
        (_initialize_amd64nbsd_nat): Update target vector to use
        nbsd_pid_to_exec_file.
        * config/i386/nbsd64.mh (NATDEPFILES): Add nbsd-nat.o.

2008-03-13  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.90.20080313-cvs.

2008-03-13  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.7.90 released.

2008-03-13  Joel Brobecker  <brobecker@adacore.com>

	* version.in: Set version to 6.7.90.

2008-03-13  Joel Brobecker  <brobecker@adacore.com>

	* README: Update GDB version number to 6.7.90.

2008-03-12  Pedro Alves  <pedro@codesourcery.com>
